<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BonafideInfoTech</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_desc">This is the logo of Bonafide InfoTech Inc.</string>
    <string name="space">space</string>
    
    <!-- home menus -->
    <string name="portfolio">PORTFOLIO</string>
    <string name="about_us">ABOUT US</string>
    <string name="services">SERVICES</string>
    <string name="contact_us">CONTACT US</string>
    
    <!-- for about -->
    <string name="company_desc"><![CDATA[Bonafide Infotech, Inc. is a software development company that specializes in custom software, web and mobile applications that utilizes the latest cutting edge technology to create custom fit software based on the highest engineering standards that provide the best user-experience.
         ​ 

]]>​</string>
	<string name="company_desc2">We are an innovative company, backed by its team of seasoned developers and programmers that creates and delivers world class, tailor fit systems and applications that keeps you and your business ahead of the competition.​ 

</string>
	<string name="company_desc3">We are located at IBM Building 14/F Unit EF, IBM Plaza 8 Eastwood Avenue Eastwood City Cyberpark E. Rodriguez - Jr. Avenue 1110 Libis - Quezon City Philippines. 

We are the Philippine representative of ​CX Bonafide Infotech Singapore . Located at 6 Ubi Road 1, Win Tech Center, #05-10, Singapore.</string>
    <string name="Mission">Mission</string>
    <string name="Vision">Vision</string>
    
    <!-- for services -->
    <string name="ios_apps">iOS Apps</string>
    <string name="ios_desc">We constantly push the boundaries when it comes to iOS development. In the high-end iOS solutions market, and despite strong, diverse, and resourceful competition, our approach to client requirements sets us apart. Our talented mobile developers collaborate to ensure we\'ll deliver the best, cost-effective service and solutions.</string>
    <string name="android_apps">Android Apps</string>
    <string name="android_desc">Nowadays, more and more people utilize Android phones and tablets thanks to their affordable prices and ease of use. With this increase in usage, we offer you an edge over your competitors by offering Android app development services based on your products and service.</string>
    <string name="web_dev">Website Development</string>
    <string name="web_desc">We adhere to our clients\’ branding rules and vision, ensuring a custom fit aligned with our client. Each website is elegantly designed and built to rank well on search engines for the right words customers use, with a look which is the same on any Internet device.</string>

</resources>
