<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_cubes"
    tools:context="com.bonafide.bonafideinfotech.MainActivity" >
    
    <ImageView
        android:id="@+id/space1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/space"/>
    
    <TextView
        android:id="@+id/portfolio"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_toRightOf="@+id/space1"
        android:text="@string/portfolio"
        android:textColor="#eeeeee"
        android:typeface="sans" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/space1"
        android:text="@string/about_us"
        android:textColor="#eeeeee" />
    <ImageView
        android:id="@+id/space2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_toRightOf="@+id/about_us"
        android:layout_below="@+id/portfolio"
        android:contentDescription="@string/space"/>
    <ImageView
        android:id="@+id/space3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/about_us"
        android:contentDescription="@string/space"/>
    <TextView
        android:id="@+id/services"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/portfolio"
        android:layout_toRightOf="@+id/space3"
        android:layout_below="@+id/space2"
        android:text="@string/services"
        android:textColor="#eeeeee" />

    <ImageView
        android:id="@+id/bnfd_logo"
        android:layout_width="110dp"
        android:layout_height="125dp"
        android:layout_alignLeft="@id/about_us"
        android:layout_below="@+id/space3"
        android:contentDescription="@string/logo_desc"
        android:maxHeight="@android:dimen/thumbnail_height"
        android:maxWidth="@android:dimen/thumbnail_width"
        android:src="@drawable/bonafide_logo" />
    <TextView
        android:id="@+id/contact_us"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignRight="@id/services"
        android:layout_below="@id/services"
        android:text="@string/contact_us"
        android:textColor="#eeeeee" />

    
</RelativeLayout>
